# sqlalchemy-iris

./: .gitignore  Dockerfile  LICENSE  README.md  requirements-dev.txt  requirements-iris.txt  requirements.txt  setup.cfg  setup.py  test-in-docker.sh  test.py  testiris.py  tox.ini
.github/workflows/: codeql.yml  python-publish.yml
scripts/: build-dist.sh
sqlalchemy_iris/: __init__.py  alembic.py  base.py  embedded.py  information_schema.py  iris.py  irisasync.py  provision.py  requirements.py  types.py
sqlalchemy_iris/intersystems/: __init__.py  cursor.py  dbapi.py
test/: conftest.py  test_suite.py
tests/: conftest.py  test_alembic.py  test_suite.py
