[metadata]
name = sqlalchemy-iris
version = 0.3.1
description = InterSystems IRIS for SQLAlchemy
long_description = file: README.md
url = https://github.com/caretdev/sqlalchemy-iris
maintainer = CaretDev
maintainer_email = dmitry@caretdev.com
license = MIT
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Database :: Front-Ends
    Operating System :: OS Independent
keywords="SQLAlchemy InterSystems IRIS",
project_urls =
    Source = https://github.com/caretdev/sqlalchemy-iris
    Tracker = https://github.com/caretdev/sqlalchemy-iris/issues

[options]
packages = 
    sqlalchemy_iris
python_requires = >=3.9

[tool:pytest]
addopts= --tb native -v -r fxX --maxfail=25 -p no:warnings
python_files=test/*test_*.py

[db]
default=iris://_SYSTEM:SYS@localhost:1972/USER
sqlite=sqlite:///:memory:

[sqla_testing]
requirement_cls=sqlalchemy_iris.requirements:Requirements
profile_file=test/profiles.txt

[flake8]
max-line-length=120
